--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ShimoBlog</title>
+  <title>Shimo Blog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <style>
+    .main { padding-top: 50px; box-shadow: 1px 1px 20px #EEE; padding-bottom: 30px; } 
+    footer { width: 100%; padding-top: 20px; padding-bottom: 20px; text-align: center; }
+  </style>
 </head>
 <body>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">shimo blog</a>
+      </div>
 
-<%= yield %>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav" id="nav-ul">
+          <li><a href="/">Index</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= if user_signed_in?
+                    current_user.email
+                  else
+                    "Option"
+                  end
+              %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Help</a></li>
+              <li><a href="#">About</a></li>
+              <li class="divider"></li>
+              <li>
+              <% if user_signed_in? %>
+                <%= link_to "sign out", destroy_user_session_path, method: "DELETE" %>
+              <% else %>
+                <%= link_to "sign in", new_user_session_path %>
+              <% end %>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <script type="text/javascript">
+  !function () {
+    var controller = window.location.pathname.split('/')[1];
+    if ( !controller ) {
+      $("#nav-ul>li:first").addClass('active');
+      return;
+    }
+    $("#nav-ul>li:gt(0)").each(function () {
+      $this = $(this);
+      if ( $this.text().toLowerCase() === controller.toLowerCase() ) {
+        $this.addClass('active');
+      }
+    });
 
+  }();
+  
+  </script>
+  <div class="container main">
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
+    <% end %>
+    <div class="row">
+      <!-- <div class="col-md-2"></div> -->
+      <div class="col-md-12">
+        <%= yield %>
+      </div>
+      <!-- <div class="col-md-2"></div> -->
+    </div>
+  </div>
+  <footer>&copy;chuxin tech, 1856-2014</footer>
 </body>
 </html>
+
