--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,32 +1,20 @@
-<h1>Listing articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Author</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= raw(article.content) %></td>
-        <td><%= article.author.try(:email) %></td>
-        <% if user_signed_in? %>
-          <td><%= link_to 'Show', article %></td>
-          <td><%= link_to 'Edit', edit_article_path(article) %></td>
-          <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
+      <h2><%= article.title %></h2>
+      <%= raw(article.content) %>
+      <%= article.author.try(:email) %>
+      <% if user_signed_in? %>
+        <br />
+        <%= link_to 'Show', article %>
+        <%= link_to 'Edit', edit_article_path(article) %>
+        <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
     <% end %>
-  </tbody>
-</table>
-<%= paginate @articles %>
-
-<br>
+    <%= paginate @articles %>
+  </div>
+</div>
 
 <%= link_to 'New Article', new_article_path %>
