--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,21 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+    <h2><%= @article.title %></h2>
 
-<p>
-  <strong>Content:</strong>
-  <%= raw(@article.content) %>
-</p>
+    <p>
+      <strong>Author:</strong>
+      <%= @article.author.try(:email) %>
+    </p>
 
-<p>
-  <strong>Author:</strong>
-  <%= @article.author_id %>
-</p>
+    <p>
+      <%= raw(@article.content) %>
+    </p>
+
+  </div>
+</div>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
