--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,81 +11,60 @@
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">shimo blog</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav" id="nav-ul">
-          <li><a href="/">Index</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= if user_signed_in?
-                    current_user.email
-                  else
-                    "Option"
-                  end
-              %>
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Help</a></li>
-              <li><a href="#">About</a></li>
-              <li class="divider"></li>
-              <li>
-              <% if user_signed_in? %>
-                <%= link_to "sign out", destroy_user_session_path, method: "DELETE" %>
-              <% else %>
-                <%= link_to "sign in", new_user_session_path %>
-              <% end %>
-              </li>
-            </ul>
+  <div class="container main">
+    <ul class="nav nav-tabs" role="tablist">
+      <li><a href="/">Home</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <%= if user_signed_in?
+                current_user.email
+              else
+                "Option"
+              end
+          %>
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" role="menu">
+          <li><a href="#">Help</a></li>
+          <li><a href="#">About</a></li>
+          <li class="divider"></li>
+          <li>
+          <% if user_signed_in? %>
+            <%= link_to "Sign out", destroy_user_session_path, method: "DELETE" %>
+          <% else %>
+            <%= link_to "Sign in", new_user_session_path %>
+          <% end %>
           </li>
         </ul>
-      </div>
-    </div>
-  </nav>
-  <script type="text/javascript">
-  !function () {
-    var controller = window.location.pathname.split('/')[1];
-    if ( !controller ) {
-      $("#nav-ul>li:first").addClass('active');
-      return;
-    }
-    $("#nav-ul>li:gt(0)").each(function () {
-      $this = $(this);
-      if ( $this.text().toLowerCase() === controller.toLowerCase() ) {
-        $this.addClass('active');
+      </li>
+    </ul>
+    <script type="text/javascript">
+    !function () {
+      var controller = window.location.pathname.split('/')[1];
+      if ( !controller ) {
+        $("#nav-ul>li:first").addClass('active');
+        return;
       }
-    });
+      $("#nav-ul>li:gt(0)").each(function () {
+        $this = $(this);
+        if ( $this.text().toLowerCase() === controller.toLowerCase() ) {
+          $this.addClass('active');
+        }
+      });
 
-  }();
-  
-  </script>
-  <div class="container main">
+    }();
+    
+    </script>
     <% flash.each do |key, value| %>
       <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
     <% end %>
     <div class="row">
-      <!-- <div class="col-md-2"></div> -->
       <div class="col-md-12">
         <%= yield %>
       </div>
-      <!-- <div class="col-md-2"></div> -->
     </div>
   </div>
-  <footer>&copy;chuxin tech, 1856-2014</footer>
+  <footer>&copy;chuxin tech, 1984-2014</footer>
 </body>
 </html>
 
