--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,19 +2,24 @@
 <div class="row">
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <% @articles.each do |article| %>
-      <h2><%= article.title %></h2>
-      <%= raw(article.content) %>
-      <%= article.author.try(:email) %>
-      <% if user_signed_in? %>
-        <br />
-        <%= link_to 'Show', article %>
-        <%= link_to 'Edit', edit_article_path(article) %>
-        <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <div class="articles-flow">
+      <% @articles.each do |article| %>
+        <h2><%= article.title %></h2>
+        <%= raw(article.content) %>
+        <%= article.author.try(:email) %>
+        <% if user_signed_in? %>
+          <br />
+          <%= link_to 'Show', article %>
+          <%= link_to 'Edit', edit_article_path(article) %>
+          <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
+        <div class="divider"></div>
       <% end %>
-    <% end %>
-    <%= paginate @articles %>
+      <%= paginate @articles %>
+    </div>
   </div>
 </div>
 
-<%= link_to 'New Article', new_article_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New Article', new_article_path %>
+<% end %>
