--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <div class="container main">
     <ul class="nav nav-tabs" role="tablist">
       <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           <%= if user_signed_in?
@@ -25,9 +26,6 @@
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu" role="menu">
-          <li><a href="#">Help</a></li>
-          <li><a href="#">About</a></li>
-          <li class="divider"></li>
           <li>
           <% if user_signed_in? %>
             <%= link_to "Sign out", destroy_user_session_path, method: "DELETE" %>
